--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.sln
+.gitattributes
+.gitignore
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
